syntax = "proto3";

package wg.cosmo.webhooks;

import 'wg/cosmo/webhooks/common.proto';

enum OrganizationEventName {
  GRAPH_SCHEMA_UPDATED = 0;
}

message GraphSchemaUpdate {
  int32 version = 1;
  FederatedGraph federatedGraph = 2;
  bool errors = 3;
  optional string actorID = 4;
}
